Blocked horizontal scroll

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             margin: 0;
             padding: 0;
             color-scheme: var(--tg-color-scheme);
+            overflow-x: hidden;
+            overscroll-behavior-x: contain;
         }
 
         body.gray {
