--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             overflow-x: hidden;
             overscroll-behavior-x: contain;
         }
+        
+        .colhoz {
+            width: 50px;
+            word-break: break-all;
+        }
 
         body.gray {
             background-color: var(--tg-theme-secondary-bg-color, #efefef);
@@ -546,7 +551,7 @@
             <li>access_requested: <span class="txt" id="bm_access_requested">false</span> (<a href="javascript:;" onclick="return DemoApp.biometricRequestAccess(this);">Request access</a>) <span></span></li>
             <li>access_granted: <span class="txt" id="bm_access_granted">false</span> <span id="bm_settings" style="display:none;">(<a href="javascript:;" onclick="return DemoApp.biometricOpenSettings(this);">Open settings</a>)</span></li>
             <li>token_saved: <span class="txt" id="bm_token_saved">false</span> (<a href="javascript:;" onclick="return DemoApp.biometricSetToken(this);">Set token</a>, <a href="javascript:;" onclick="return DemoApp.biometricRemoveToken(this);">Remove token</a>) <span></span></li>
-            <li>device_id: <span class="txt" id="bm_device_id"></span></li>
+            <li>device_id: <span class="txt colhoz" id="bm_device_id"></span></li>
             <li><a href="javascript:;" onclick="return DemoApp.biometricRequestAuth(this);">Request auth</a> <span></span></li>
         </ul>
     </div>
