--- a/index.html
+++ b/index.html
@@ -595,6 +595,12 @@
 <div class="viewport-stable_border"></div>
 
 <script type="application/javascript">
+    document.addEventListener("wheel", function(event) {
+        if (event.deltaX !== 0) {
+            event.preventDefault();
+        }
+    }, { passive: false });
+
 
     /*
      * This is a demo code for Telegram WebApp for Bots
