--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     </script>
     <title></title>
     <style>
+        html {
+            width: 100%;
+            max-width: 100%;
+            overflow-x: hidden;
+        }
+
         body {
             --bg-color: var(--tg-theme-bg-color, #fff);
             font-family: sans-serif;
