--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             width: 100%;
             max-width: 100%;
             overflow-x: hidden;
+            overscroll-behavior: none;
         }
 
         body {
