--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
+            -webkit-tap-highlight-color: transparent;
+            user-select: none;
         }
         .container {
             display: none;
@@ -52,7 +54,16 @@
             font-size: 16px;
             cursor: pointer;
             color: var(--tg-theme-text-color, #222);
-            transition: color 0.3s ease, transform 0.2s ease;
+            transition: color 0.2s ease, transform 0.1s ease;
+            outline: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+        .bottom-nav button:active {
+            transform: scale(0.95);
+            opacity: 0.7;
         }
         .bottom-nav button.active {
             font-weight: bold;
