--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="profile" class="container">Профиль</div>
 
     <div class="bottom-nav">
-        <button onclick="changeTab('home')" class="active">⌂</button>
+        <button onclick="changeTab('home')" class="active">🏠</button>
         <button onclick="changeTab('search')">🔎</button>
         <button onclick="changeTab('profile')">👤</button>
     </div>
