--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     </style>
 </head>
 <body>
-    <div id="home" class="container active">Главная</div>
-    <div id="search" class="container">Поиск</div>
-    <div id="profile" class="container">Профиль</div>
+    <div id="home" class="container active">Головна</div>
+    <div id="search" class="container">Пошук</div>
+    <div id="profile" class="container">Профіль</div>
 
     <div class="bottom-nav">
-        <button onclick="changeTab('home')" class="active">⌂</button>
+        <button onclick="changeTab('home')" class="active">🏠</button>
         <button onclick="changeTab('search')">🔎</button>
         <button onclick="changeTab('profile')">👤</button>
     </div>
